--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Battery Invest s,r,o,</title>
+  <title>Battery Invest s.r.o.</title>
   <link rel="stylesheet" href="style.css" />
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -34,7 +34,7 @@
     
 
     <section id="sluzby">
-      <h2>Naše služby</h2>
+      <h2>Our services</h2>
       <ul class="sluzby-list">
         <li>✔ Battery storage solutions</li>
         <li>✔ Battery applications</li>
@@ -44,7 +44,9 @@
 
     <section id="kontakt">
       <h2>Contact us</h2>
+       <p> ID: 08148431</a></p>
       <p>Email: <a href="mailto:info@batteryinvest.eu">info@batteryinvest.eu</a></p>
+      </p>U Drahy 322, 25303 Chyne, Czechia</a></p>
      </section>
   </main>
 
