--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <link rel="manifest" href="site.webmanifest">
 </head>
 <body>
- .logo {
-  max-width: 120px;
-  height: auto;
-  display: block;
-  margin: 0 auto 10px auto;
-    <div class="container">
+  <header>
+ <div class="container header-flex">
+    <img src="logo.png" alt="Logo firmy" class="logo" />
+    <div>
       <h1>Battery Invest s.r.o.</h1>
          </div>
   </header>
