--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
  <div class="container header-flex">
-    <img src="logo.png" alt="Logo firmy" class="logo" />
+    <img src="BIlogo.png" alt="Logo firmy" class="logo" />
     <div>
       <h1>Battery Invest s.r.o.</h1>
          </div>
