--- a/index.html
+++ b/index.html
@@ -12,20 +12,13 @@
 <body>
   <header>
  <div class="container header-flex">
-    <img src="BIlogo.png" alt="Logo firmy" class="logo" />
+    <img src="BIlogo.png" alt="Logo BI" class="logo" />
     <div>
       <h1>Battery Invest s.r.o.</h1>
          </div>
   </header>
 
-  <nav>
-    <div class="container">
-      <ul>
-        <li><a href="#sluzby">Our services</a></li>
-        <li><a href="#kontakt">Contact us</a></li>
-      </ul>
-    </div>
-  </nav>
+ 
 
   <main class="container">
     
