--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>Contact us</h2>
        <p> CZ ID: 08148431</a></p>
       <p>Email: <a href="mailto:info@batteryinvest.eu">info@batteryinvest.eu</a></p>
-      </p>U Drahy 322, 25303 Chyne, Czechia</a></p>
+      </p>U Drahy 322, 253 03 Chyne, Czechia</a></p>
      </section>
   </main>
 
